--- a/example/src/main/res/layout/activity_main.xml
+++ b/example/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.huijin.festec.example.ExampleActivity">
+    tools:context="com.donghuang.festec.example.ExampleActivity">
 
     <com.joanzapata.iconify.widget.IconTextView
         android:id="@+id/icon_test"
